--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 08/03/2021 15:00<br>
+Reserved books sorted by length - 08/03/2021 16:02<br>
 -----------------------------------------------------<br>
  <br>
 806 books<br>
@@ -761,8 +761,8 @@ Average completed per year: 44.1 titles - 490H 56M / 20D 10H 56M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
 Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:03.045 (3.045 seconds)<br>
-Total time including file writes: 00:00:03.045 (3.045 seconds)
+Total time to process all reports: 00:00:03..65 (3.65 seconds)<br>
+Total time including file writes: 00:00:03..65 (3.65 seconds)
 </div>
 </body>
 </html>
