--- a/report/media/index.html
+++ b/report/media/index.html
@@ -152,7 +152,7 @@ Season 1<!-- 10 episodes -->
 <img src="checked.png">
 <img src="checked.png">
 <img src="checked.png">
-<img src="unchecked.png">
+<img src="checked.png">
 <img src="unchecked.png">
 <img src="unchecked.png">
 <img src="unchecked.png">
@@ -298,15 +298,7 @@ Season 1<!-- 8 episodes -->
 <img src="unchecked.png">
 </td></tr>
 <tr><td>
-Season 2<!-- 8 episodes -->
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
+Season 2<!-- 0 episodes -->
 </td></tr>
 </table><br>
 
@@ -377,10 +369,10 @@ Season 2<!-- 9 episodes -->
 </td></tr>
 <tr><td>
 Season 3<!-- 8 episodes -->
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
-<img src="unchecked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
+<img src="checked.png">
 <img src="unchecked.png">
 <img src="unchecked.png">
 <img src="unchecked.png">
