--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 08/03/2021 16:06<br>
+Completed books sorted by folder - 08/04/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 46 books - 437H 19M / 18D 5H 19M<br>
 Total Comic Trades : 18<br>
 Average book length : 9H 30M<br>
-Hours read per week : 14H 14M<br>
-On pace to complete 78 books (742H 52M / 30D 22H 52M) by the end of 2021<br>
+Hours read per week : 14H 10M<br>
+On pace to complete 77 books (739H 25M / 30D 19H 25M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -479,12 +479,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 379 titles - 4215H 7M / 175D 15H 7M<br>
 Total remaining in queue and reserve: 806 titles - 10063H 42M / 419D 7H 42M<br>
-Average completed per year: 44.1 titles - 490H 56M / 20D 10H 56M<br>
+Average completed per year: 44.1 titles - 490H 46M / 20D 10H 46M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
-Remaining years of reserve material at current year pace: 10.3<br>
+Remaining years of reserve material at current year pace: 10.5<br>
  <br>
-Total time to process all reports: 00:00:03.269 (3.269 seconds)<br>
-Total time including file writes: 00:00:03..27 (3.27 seconds)
+Total time to process all reports: 00:00:02.252 (2.252 seconds)<br>
+Total time including file writes: 00:00:02.253 (2.253 seconds)
 </div>
 </body>
 </html>
