--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 08/03/2021 16:06<br>
+Completed books sorted by length - 08/04/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 379 books<br>
@@ -409,12 +409,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 379 titles - 4215H 7M / 175D 15H 7M<br>
 Total remaining in queue and reserve: 806 titles - 10063H 42M / 419D 7H 42M<br>
-Average completed per year: 44.1 titles - 490H 56M / 20D 10H 56M<br>
+Average completed per year: 44.1 titles - 490H 46M / 20D 10H 46M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
-Remaining years of reserve material at current year pace: 10.3<br>
+Remaining years of reserve material at current year pace: 10.5<br>
  <br>
-Total time to process all reports: 00:00:03.269 (3.269 seconds)<br>
-Total time including file writes: 00:00:03..27 (3.27 seconds)
+Total time to process all reports: 00:00:02.252 (2.252 seconds)<br>
+Total time including file writes: 00:00:02.253 (2.253 seconds)
 </div>
 </body>
 </html>
