--- a/report/books/index.html
+++ b/report/books/index.html
@@ -46,9 +46,9 @@
     <BR>
 <a href="All_books_sorted_by_name.html">All Books by Name</a><BR>
     <BR>
-<a href="sanderstatus.html">Sanderstatus</a>
+<a href="sanderstatus.html">Sanderstatus</a><BR>
     <BR>
-<a href="2020_book_images.html">2020 Book Images</a>
+<a href="2020_book_images.html">2020 Book Images</a><BR>
 <a href="2021_book_images.html">2021 Book Images</a>
 </div>
 </body>
