--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 08/09/2021 08:44<br>
+Completed books sorted by folder - 08/10/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 48 books - 451H 35M / 18D 19H 35M<br>
 Total Comic Trades : 19<br>
 Average book length : 9H 24M<br>
-Hours read per week : 14H 18M<br>
-On pace to complete 79 books (746H 19M / 31D 2H 19M) by the end of 2021<br>
+Hours read per week : 14H 14M<br>
+On pace to complete 78 books (742H 58M / 30D 22H 58M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -162,7 +162,7 @@ The Sixth Extinction - An Unnatural History - Elizabeth Kolbert - 9H 59M<br>
 The Subtle Art of Not Giving a Fck - Mark Manson - 5H 18M<br>
 The Unbeatable Squirrel Girl Vol. 1 Squirrel Power - 3H 59M<br>
 Thinking, Fast and Slow - Daniel Kahneman - 20H 7M<br>
-This Census-Taker - China MiÃ©ville - 4H 3M<br>
+This Census-Taker - China Miéville - 4H 3M<br>
 White Sand vol 1 - Brandon Sanderson - 4H 57M<br>
 Wisdom of Crowds - James Surowiecki - 9H 33M<br>
 You Have Arrived at Your Destination - Amor Towles - 1H 22M<br>
@@ -481,12 +481,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 381 titles - 4229H 23M / 176D 5H 23M<br>
 Total remaining in queue and reserve: 805 titles - 10057H 24M / 419D 1H 24M<br>
-Average completed per year: 44.3 titles - 491H 39M / 20D 11H 39M<br>
+Average completed per year: 44.3 titles - 491H 30M / 20D 11H 30M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.2<br>
+Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:01.537 (1.537 seconds)<br>
-Total time including file writes: 00:00:01.537 (1.537 seconds)
+Total time to process all reports: 00:00:02.018 (2.018 seconds)<br>
+Total time including file writes: 00:00:02.018 (2.018 seconds)
 </div>
 </body>
 </html>
