--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 08/09/2021 08:44<br>
+Completed books sorted by name - 08/10/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 381 books<br>
@@ -375,7 +375,7 @@ The Time Machine - H G Wells - 3H 56M (Completed in 2017)<br>
 The Unbeatable Squirrel Girl Vol. 1 Squirrel Power - 3H 59M (Completed in 2020)<br>
 The Wonderful Wizard of Oz - L. Frank Baum - 3H 59M (Completed in 2018)<br>
 Thinking, Fast and Slow - Daniel Kahneman - 20H 7M (Completed in 2020)<br>
-This Census-Taker - China MiÃ©ville - 4H 3M (Completed in 2020)<br>
+This Census-Taker - China Miéville - 4H 3M (Completed in 2020)<br>
 Thrawn Trilogy 1 - Heir to the Empire - Timothy Zahn - 13H 13M (Completed in 2013)<br>
 Thrawn Trilogy 2 - Dark Force Rising - Timothy Zahn - 15H 0M (Completed in 2013)<br>
 Thrawn Trilogy 3 - The Last Command - Timothy Zahn - 15H 51M (Completed in 2014)<br>
@@ -428,12 +428,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 381 titles - 4229H 23M / 176D 5H 23M<br>
 Total remaining in queue and reserve: 805 titles - 10057H 24M / 419D 1H 24M<br>
-Average completed per year: 44.3 titles - 491H 39M / 20D 11H 39M<br>
+Average completed per year: 44.3 titles - 491H 30M / 20D 11H 30M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.2<br>
+Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:01.537 (1.537 seconds)<br>
-Total time including file writes: 00:00:01.537 (1.537 seconds)
+Total time to process all reports: 00:00:02.018 (2.018 seconds)<br>
+Total time including file writes: 00:00:02.018 (2.018 seconds)
 </div>
 </body>
 </html>
