--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 08/09/2021 08:44<br>
+Reserved books sorted by length - 08/10/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 805 books<br>
@@ -244,7 +244,7 @@ Time Quartet 4 - Many Waters - Madeleine L'engle - 8H 57M (Book Reserve - Audiob
 Machineries of Empire 2 - Raven Stratagem - Yoon Ha Lee - 9H 1M (Book Reserve - Physical and Kindle Books)<br>
 Flowers for Algernon - Daniel Keyes - 9H 2M (Book Reserve - Audiobooks)<br>
 Bezonomics - Brian Dumaine - 9H 2M (Book Reserve - Audiobooks)<br>
-VocabuLearnÂ® German Complete - 9H 2M (Queue - Current Audiobooks)<br>
+VocabuLearn® German Complete - 9H 2M (Queue - Current Audiobooks)<br>
 The Uninhabitable Earth - David Wallace-Wells - 9H 2M (Queue - Current Audiobooks)<br>
 The Sirens of Titan - Kurt Vonnegut - 9H 4M (Book Reserve - Audiobooks (Need new source))<br>
 Heir to the Jedi - Kevin Hearne - 9H 4M (Book Reserve - Audiobooks)<br>
@@ -757,12 +757,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 381 titles - 4229H 23M / 176D 5H 23M<br>
 Total remaining in queue and reserve: 805 titles - 10057H 24M / 419D 1H 24M<br>
-Average completed per year: 44.3 titles - 491H 39M / 20D 11H 39M<br>
+Average completed per year: 44.3 titles - 491H 30M / 20D 11H 30M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.2<br>
+Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:01.537 (1.537 seconds)<br>
-Total time including file writes: 00:00:01.537 (1.537 seconds)
+Total time to process all reports: 00:00:02.018 (2.018 seconds)<br>
+Total time including file writes: 00:00:02.018 (2.018 seconds)
 </div>
 </body>
 </html>
