--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 08/09/2021 08:44<br>
+Reserved books sorted by name - 08/10/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 805 books<br>
@@ -772,7 +772,7 @@ Uprooted - Naomi Novik - 17H 49M (Queue - Current Audiobooks)<br>
 VALIS - Philip K Dick - 8H 44M (Book Reserve - Audiobooks (Need new source))<br>
 Venomverse - 3H 59M (Book Reserve - Comic Trades)<br>
 Venus Plus X - Theodore Sturgeon - 6H 28M (Book Reserve - Audiobooks)<br>
-VocabuLearnÂ® German Complete - 9H 2M (Queue - Current Audiobooks)<br>
+VocabuLearn® German Complete - 9H 2M (Queue - Current Audiobooks)<br>
 War Machine - Volume 1 Iron Heart - 4H 14M (Book Reserve - Comic Trades)<br>
 Way Station (Here Gather the Stars) - Clifford Simak - 7H 1M (Book Reserve - Audiobooks (Need new source))<br>
 Wayfarers 1 - The Long Way to a Small, Angry Planet - Becky Chambers - 14H 27M (Queue - Current Audiobooks)<br>
@@ -852,12 +852,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 381 titles - 4229H 23M / 176D 5H 23M<br>
 Total remaining in queue and reserve: 805 titles - 10057H 24M / 419D 1H 24M<br>
-Average completed per year: 44.3 titles - 491H 39M / 20D 11H 39M<br>
+Average completed per year: 44.3 titles - 491H 30M / 20D 11H 30M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.2<br>
+Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:01.537 (1.537 seconds)<br>
-Total time including file writes: 00:00:01.537 (1.537 seconds)
+Total time to process all reports: 00:00:02.018 (2.018 seconds)<br>
+Total time including file writes: 00:00:02.018 (2.018 seconds)
 </div>
 </body>
 </html>
