--- a/report/books/sanderstatus.html
+++ b/report/books/sanderstatus.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 <div class="content">
-Progress bars collected from from brandonsanderson.com on 2021-08-09<br>
+Progress bars collected from from brandonsanderson.com on 2021-08-10<br>
 <br>
 Cytonic 2nd Proofread 100%<br>
 <br>
 Wax & Wayne Book 4 (Mistborn 7) 100%<br>
 <br>
-ReDawn (Skyward Novella 2) Draft 3.0 100%<br>
+ReDawn (Skyward Novella 2) Final Draft 50%<br>
 <br>
 Evershore (Skyward Novella 3) Draft 1.0 100%<br>
 <br>
