--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-All books sorted by name - 08/12/2021 06:00<br>
+All books sorted by name - 08/12/2021 10:07<br>
 -----------------------------------------------------<br>
  <br>
 1186 books<br>
@@ -827,7 +827,7 @@ Takeshi Kovacs 1 - Altered Carbon - Richard Morgan - 17H 13M (Completed in 2013)
 Takeshi Kovacs 2 - Broken Angels - Richard Morgan - 16H 11M (Book Reserve - Audiobooks)<br>
 Takeshi Kovacs 3 - Woken Furies - Richard Morgan - 22H 6M (Book Reserve - Audiobooks)<br>
 Talking Across the Divide - Justin Lee - 6H 4M (Queue - Current Audiobooks)<br>
-Talking to Strangers - Malcolm Gladwell - 8H 45M (Queue - Current Audiobooks)<br>
+Talking to Strangers - Malcolm Gladwell - 8H 45M (Completed in 2021)<br>
 Teen Titans Raven - 5H 58M (Completed in 2021)<br>
 Teen Titans by Geoff Johns Book One - 11H 27M (Book Reserve - Comic Trades)<br>
 Teixcalaan 1 - A Memory Called Empire - Arkady Martine - 15H 41M (Queue - Current Audiobooks)<br>
@@ -1203,9 +1203,9 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 173 books - 2244H 2M / 93D 12H 2M<br>
+Queue - Current Audiobooks - 172 books - 2235H 17M / 93D 3H 17M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 48 books - 451H 35M / 18D 19H 35M<br>
+Completed in 2021 - 49 books - 460H 20M / 19D 4H 20M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -1223,22 +1223,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-206 queued items: 2751H 8M / 114D 15H 8M<br>
+205 queued items: 2742H 23M / 114D 6H 23M<br>
 0 reserve titles are marked as high priority<br>
-25.59% of reserve items are queued<br>
+25.5% of reserve items are queued<br>
  <br>
 All books included in this report: 1186 titles - 14286H 48M / 595D 6H 48M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 381 titles - 4229H 23M / 176D 5H 23M<br>
-Total remaining in queue and reserve: 805 titles - 10057H 24M / 419D 1H 24M<br>
-Average completed per year: 44.2 titles - 491H 11M / 20D 11H 11M<br>
-Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.3<br>
+Total completed since 01/01/2013: 382 titles - 4238H 8M / 176D 14H 8M<br>
+Total remaining in queue and reserve: 804 titles - 10048H 39M / 418D 16H 39M<br>
+Average completed per year: 44.4 titles - 492H 12M / 20D 12H 12M<br>
+Remaining years of reserve material at average yearly pace: 18.1<br>
+Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.616 (1.616 seconds)<br>
-Total time including file writes: 00:00:01.616 (1.616 seconds)
+Total time to process all reports: 00:00:03.488 (3.488 seconds)<br>
+Total time including file writes: 00:00:03.489 (3.489 seconds)
 </div>
 </body>
 </html>
