--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 08/12/2021 06:00<br>
+Completed books sorted by folder - 08/12/2021 10:07<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 48 books - 451H 35M / 18D 19H 35M<br>
+Completed in 2021 : 49 books - 460H 20M / 19D 4H 20M<br>
 Total Comic Trades : 19<br>
-Average book length : 9H 24M<br>
-Hours read per week : 14H 6M<br>
-On pace to complete 78 books (736H 16M / 30D 16H 16M) by the end of 2021<br>
+Average book length : 9H 23M<br>
+Hours read per week : 14H 23M<br>
+On pace to complete 79 books (750H 35M / 31D 6H 35M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -51,6 +51,7 @@ Star Wars the High Republic - A Test of Courage - Justina Ireland - 4H 35M<br>
 Star Wars the High Republic - Into the Dark - Claudia Gray - 11H 14M<br>
 Star Wars the High Republic - Light of the Jedi - Charles Soule - 13H 38M<br>
 Superfreakonomics - Steven D. Levitt - 7H 30M<br>
+Talking to Strangers - Malcolm Gladwell - 8H 45M<br>
 Teen Titans Raven - 5H 58M<br>
 The 7 Habits of Highly Effective People - Stephen R. Covey - 13H 8M<br>
 The Batman Who Laughs - 7H 13M<br>
@@ -451,9 +452,9 @@ World War Z - Max Brooks - 5H 59M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 173 books - 2244H 2M / 93D 12H 2M<br>
+Queue - Current Audiobooks - 172 books - 2235H 17M / 93D 3H 17M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 48 books - 451H 35M / 18D 19H 35M<br>
+Completed in 2021 - 49 books - 460H 20M / 19D 4H 20M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -471,22 +472,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-206 queued items: 2751H 8M / 114D 15H 8M<br>
+205 queued items: 2742H 23M / 114D 6H 23M<br>
 0 reserve titles are marked as high priority<br>
-25.59% of reserve items are queued<br>
+25.5% of reserve items are queued<br>
  <br>
 All books included in this report: 1186 titles - 14286H 48M / 595D 6H 48M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 381 titles - 4229H 23M / 176D 5H 23M<br>
-Total remaining in queue and reserve: 805 titles - 10057H 24M / 419D 1H 24M<br>
-Average completed per year: 44.2 titles - 491H 11M / 20D 11H 11M<br>
-Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.3<br>
+Total completed since 01/01/2013: 382 titles - 4238H 8M / 176D 14H 8M<br>
+Total remaining in queue and reserve: 804 titles - 10048H 39M / 418D 16H 39M<br>
+Average completed per year: 44.4 titles - 492H 12M / 20D 12H 12M<br>
+Remaining years of reserve material at average yearly pace: 18.1<br>
+Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.616 (1.616 seconds)<br>
-Total time including file writes: 00:00:01.616 (1.616 seconds)
+Total time to process all reports: 00:00:03.488 (3.488 seconds)<br>
+Total time including file writes: 00:00:03.489 (3.489 seconds)
 </div>
 </body>
 </html>
