--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 08/12/2021 06:00<br>
+Completed books sorted by length - 08/12/2021 10:07<br>
 -----------------------------------------------------<br>
  <br>
-381 books<br>
+382 books<br>
  <br>
 Shadow War of the Night Dragons 1 -The Dead City - Prologue - John Scalzi - 0H 21M (Completed in 2014)<br>
 Gratitude - Oliver Sacks - 0H 36M (Completed in 2020)<br>
@@ -173,6 +173,7 @@ Discworld 35 - Wintersmith - 8H 34M (Completed in 2019)<br>
 A Blink of the Screen - Terry Pratchett - 8H 34M (Completed in 2018)<br>
 HP 1 - Harry Potter and the Sorcerer's Stone - J.K. Rowling - 8H 35M (Completed in 2020)<br>
 Foundation 1 - Foundation - 8H 41M (Completed in 2013)<br>
+Talking to Strangers - Malcolm Gladwell - 8H 45M (Completed in 2021)<br>
 Discworld 32 - A Hat Full of Sky - 8H 47M (Completed in 2016)<br>
 I, Robot - Isaac Asimov - 8H 49M (Completed in 2013)<br>
 Discworld 18 - Maskerade - 8H 51M (Completed in 2021)<br>
@@ -380,9 +381,9 @@ Stormlight Archive 4 - Rhythm of War - Brandon Sanderson - 57H 41M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 173 books - 2244H 2M / 93D 12H 2M<br>
+Queue - Current Audiobooks - 172 books - 2235H 17M / 93D 3H 17M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 48 books - 451H 35M / 18D 19H 35M<br>
+Completed in 2021 - 49 books - 460H 20M / 19D 4H 20M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -400,22 +401,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-206 queued items: 2751H 8M / 114D 15H 8M<br>
+205 queued items: 2742H 23M / 114D 6H 23M<br>
 0 reserve titles are marked as high priority<br>
-25.59% of reserve items are queued<br>
+25.5% of reserve items are queued<br>
  <br>
 All books included in this report: 1186 titles - 14286H 48M / 595D 6H 48M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 381 titles - 4229H 23M / 176D 5H 23M<br>
-Total remaining in queue and reserve: 805 titles - 10057H 24M / 419D 1H 24M<br>
-Average completed per year: 44.2 titles - 491H 11M / 20D 11H 11M<br>
-Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.3<br>
+Total completed since 01/01/2013: 382 titles - 4238H 8M / 176D 14H 8M<br>
+Total remaining in queue and reserve: 804 titles - 10048H 39M / 418D 16H 39M<br>
+Average completed per year: 44.4 titles - 492H 12M / 20D 12H 12M<br>
+Remaining years of reserve material at average yearly pace: 18.1<br>
+Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.616 (1.616 seconds)<br>
-Total time including file writes: 00:00:01.616 (1.616 seconds)
+Total time to process all reports: 00:00:03.488 (3.488 seconds)<br>
+Total time including file writes: 00:00:03.489 (3.489 seconds)
 </div>
 </body>
 </html>
