--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 08/14/2021 06:00<br>
+Reserved books sorted by folder - 08/15/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Queue - Current Audiobooks : 173 books - 2238H 23M / 93D 6H 23M<br>
+Queue - Current Audiobooks : 174 books - 2240H 47M / 93D 8H 47M<br>
  <br>
 112263 - Stephen King - 30H 46M<br>
 13 Things Mentally Strong Parents Don't Do - Amy Morin - 10H 13M<br>
@@ -78,6 +78,7 @@ Learn Like a Pro - Barbara Oakley - 3H 39M<br>
 Life 3.0 - Max Tegmark - 13H 33M<br>
 Locked Tomb 1 - Gideon the Ninth - Tamsyn Muir - 16H 55M<br>
 Locked Tomb 2 - Harrow the Ninth  - Tamsyn Muir - 19H 56M<br>
+Logan's Run - William F. Nolan - 2H 23M<br>
 Man's Search for Meaning - Viktor E. Frankl - 4H 46M<br>
 Mars trilogy 1 - Red Mars - Kim Stanley Robinson - 23H 4M<br>
 Mary Poppins - P. L. Travers - 3H 51M<br>
@@ -843,7 +844,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 173 books - 2238H 23M / 93D 6H 23M<br>
+Queue - Current Audiobooks - 174 books - 2240H 47M / 93D 8H 47M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
 Completed in 2021 - 49 books - 460H 20M / 19D 4H 20M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -863,22 +864,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-206 queued items: 2745H 29M / 114D 9H 29M<br>
+207 queued items: 2747H 53M / 114D 11H 53M<br>
 0 reserve titles are marked as high priority<br>
-25.59% of reserve items are queued<br>
+25.68% of reserve items are queued<br>
  <br>
-All books included in this report: 1187 titles - 14289H 54M / 595D 9H 54M<br>
+All books included in this report: 1188 titles - 14292H 18M / 595D 12H 18M<br>
 Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 382 titles - 4238H 8M / 176D 14H 8M<br>
-Total remaining in queue and reserve: 805 titles - 10051H 45M / 418D 19H 45M<br>
-Average completed per year: 44.3 titles - 491H 53M / 20D 11H 53M<br>
+Total remaining in queue and reserve: 806 titles - 10054H 9M / 418D 22H 9M<br>
+Average completed per year: 44.3 titles - 491H 44M / 20D 11H 44M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.2<br>
+Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:01.883 (1.883 seconds)<br>
-Total time including file writes: 00:00:01.883 (1.883 seconds)
+Total time to process all reports: 00:00:02.325 (2.325 seconds)<br>
+Total time including file writes: 00:00:02.325 (2.325 seconds)
 </div>
 </body>
 </html>
